# gateway-demo

./: .gitignore  Dockerfile  README.md  config.js  package.json
.github/deploy/: backend-deploy-and-push.sh  frontend-deploy-site.sh  k8s-deployment.yaml
.github/deploy/backend/: Chart.yaml
.github/deploy/backend/templates/: NOTES.txt  ingress.yaml  service.yaml  serviceaccount.yaml
.github/workflows/: backend.yml  frontend.yml  program.yml
backend/: Dockerfile  package.json
backend/deploy/backend/: values.yaml
backend/deploy/backend/templates/: _helpers.tpl  deployment.yaml  hpa.yaml
backend/deploy/backend/templates/tests/: test-connection.yaml
backend/src/: config.js  index.js  test.js
backend/src/config/: default.js  local.js  prod.js
frontend/: package.json  webpack.config.js
frontend/deploy/: deploy-site.sh
frontend/etc/deploy/: create-stack.sh  deploy-site.sh
frontend/src/: config.js  index.css  index.html  index.js  util.js
frontend/src/config/: default.js  local.js  prod.js
frontend/src/idl/: gateway_demo.json
frontend/src/ui/: index.js  wallet.js
program/: Anchor.toml
program/programs/gateway_demo/: Cargo.toml
program/programs/gateway_demo/src/: lib.rs
program/tests/: gateway_demo.ts
scripts/: frontend-deploy-site.sh
