[package]
name = "gateway_demo"
version = "0.1.0"
description = "Gateway Demo"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-gateway = "0.1.1"
